--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/base_margin_quadruple"
     tools:context=".feature.offer.ui.OfferActivity">
 
-    <com.hedvig.app.ui.view.HedvigCardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/base_margin_double">
@@ -21,12 +21,14 @@
 
             <TextView
                 android:id="@+id/campaign"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin_half"
                 android:background="@drawable/background_premium_box_with_campaign"
-                android:textAppearance="?textAppearanceSubtitle1"
-                tools:text="Discount" />
+                android:gravity="center"
+                android:paddingBottom="@dimen/base_margin_half"
+                style="@style/Hedvig.TextAppearance.Discount"
+                tools:text="25 % BUNDLE DISCOUNT・10 SEK DISCOUNT/MO.・15 % DISCOUNT FROM SEB" />
 
             <TextView
                 android:id="@+id/title"
@@ -49,26 +51,45 @@
                 tools:visibility="visible" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/base_margin_double"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/premium"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?textAppearanceHeadline3"
-                    tools:text="179" />
+                    android:layout_gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/original_premium"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginEnd="@dimen/base_margin"
+                        android:textAppearance="?textAppearanceHeadline6"
+                        android:textColor="@color/gray"
+                        tools:text="179 SEK" />
+
+                    <TextView
+                        android:id="@+id/premium"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:textAppearance="?textAppearanceHeadline4"
+                        tools:text="179 SEK" />
+
+                </LinearLayout>
 
                 <TextView
-                    android:layout_gravity="center"
                     android:id="@+id/premiumPeriod"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="@string/OFFER_PRICE_PER_MONTH"
                     android:textAppearance="?textAppearanceSubtitle1"
-                    android:textColor="@color/gray" />
+                    android:textColor="@color/grey_inactive" />
 
             </LinearLayout>
 
@@ -138,5 +159,5 @@
                 tools:text="@string/REFERRAL_ADDCOUPON_HEADLINE" />
 
         </LinearLayout>
-    </com.hedvig.app.ui.view.HedvigCardView>
+    </com.google.android.material.card.MaterialCardView>
 </FrameLayout>
