Add custom view and scrollable bottomsheet in order to support multiple start dates for bundles. Refactor view model and offer repository.

--- a/app/src/main/res/layout/dialog_change_start_date.xml
+++ b/app/src/main/res/layout/dialog_change_start_date.xml
@@ -18,62 +18,40 @@
         android:contentDescription="@null"
         app:srcCompat="@drawable/bottom_sheet_handle" />
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:gravity="center"
-        android:text="@string/OFFER_SET_START_DATE"
-        android:textAppearance="?textAppearanceHeadline5" />
+        android:layout_height="wrap_content">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/date_pick_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:hint="@string/OFFER_START_DATE"
-        app:boxCornerRadiusBottomEnd="@dimen/base_margin"
-        app:boxCornerRadiusBottomStart="@dimen/base_margin"
-        app:boxCornerRadiusTopEnd="@dimen/base_margin"
-        app:boxCornerRadiusTopStart="@dimen/base_margin">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/datePickText"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:editable="false"
-            android:focusable="false"
-            android:textAppearance="?textAppearanceBody1"
-            android:textColor="@color/textColorSecondary" />
+            android:orientation="vertical">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/base_margin_triple"
+                android:gravity="center"
+                android:text="@string/OFFER_SET_START_DATE"
+                android:textAppearance="?textAppearanceHeadline5" />
 
-    <TextView
-        android:id="@+id/autoSetDateTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_triple"
-        android:text="@string/OFFER_PLAN_EXPIRE_TITLE"
-        android:textAppearance="?textAppearanceSubtitle1" />
+            <LinearLayout
+                android:id="@+id/change_date_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
 
-    <com.google.android.material.switchmaterial.SwitchMaterial
-        android:id="@+id/auto_set_date_switch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin_half"
-        android:text="@string/OFFER_PLAN_EXIRES_TEXT"
-        android:textColor="@color/textColorPrimary"
-        app:switchPadding="@dimen/base_margin_triple"
-        app:switchTextAppearance="?textAppearanceBody2" />
+            <Button
+                android:id="@+id/chooseDateButton"
+                style="@style/Hedvig.Button.Large"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/base_margin_double"
+                android:text="@string/general_save_button" />
 
-    <Button
-        android:id="@+id/chooseDateButton"
-        style="@style/Hedvig.Button.Large"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/base_margin_double"
-        android:text="@string/general_save_button" />
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
