--- a/app/src/main/res/layout/expandable_bottom_sheet.xml
+++ b/app/src/main/res/layout/expandable_bottom_sheet.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".feature.insurance.ui.detail.coverage.PerilBottomSheet">
+    tools:context=".feature.perils.PerilBottomSheet">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
