Query displayName and use as title if there are only one quote in bundle

--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -39,7 +39,8 @@
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:layout_marginTop="@dimen/base_margin_triple"
                 android:layout_marginEnd="@dimen/base_margin_double"
-                android:textAppearance="?textAppearanceHeadline5"
+                android:textAppearance="?textAppearanceCaption"
+                android:textAllCaps="true"
                 tools:text="HEDVIG BOSTADSRÄTT" />
 
             <TextView
