--- a/app/src/main/res/layout/contract_coverage_detail_row.xml
+++ b/app/src/main/res/layout/contract_coverage_detail_row.xml
@@ -34,6 +34,7 @@
         android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/general_more_information_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
