--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -136,7 +136,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/sign"
                 style="?materialButtonContainedLargeStyle"
                 android:layout_width="match_parent"
@@ -144,10 +144,8 @@
                 android:layout_marginHorizontal="@dimen/base_margin_double"
                 android:layout_marginTop="@dimen/base_margin_quadruple"
                 android:text="@string/OFFER_SIGN_BUTTON"
-                app:icon="@drawable/ic_bank_id"
                 app:iconGravity="textEnd"
-                app:iconPadding="@dimen/base_margin_double"
-                tools:translationY="0dp" />
+                app:iconPadding="@dimen/base_margin_double" />
 
             <Button
                 android:id="@+id/discountButton"
