--- a/app/src/main/res/layout/offer_switch.xml
+++ b/app/src/main/res/layout/offer_switch.xml
@@ -4,17 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/base_margin_double">
+    android:layout_marginHorizontal="@dimen/base_margin_double"
+    android:layout_marginBottom="@dimen/base_margin_double">
+
+    <TextView
+        android:id="@+id/associatedQuote"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_margin_triple"
+        android:textAppearance="?textAppearanceHeadline6"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Home Insurance"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/currentInsurerLabel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/base_margin_double"
         android:text="@string/offer_screen.switcher_current_insurer_label"
         android:textAppearance="?textAppearanceSubtitle1"
         app:layout_constraintEnd_toStartOf="@id/currentInsurer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/associatedQuote" />
 
     <TextView
         android:id="@+id/currentInsurer"
