--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -5,8 +5,14 @@
     android:id="@+id/offerRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:colorBackground"
+    android:background="@drawable/gradient_summer_sky"
     tools:context=".feature.offer.ui.OfferActivity">
+
+    <ProgressBar
+        android:id="@id/progressBar"
+        android:layout_width="@dimen/loading_spinner_width"
+        android:layout_height="@dimen/loading_spinner_height"
+        android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/offerScroll"
@@ -14,6 +20,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/signButton"
         android:clipToPadding="false"
+        android:layoutAnimation="@anim/layout_animation_appear_from_bottom"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:spanCount="2"
@@ -38,7 +45,6 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
         app:liftOnScroll="true">
 
         <com.google.android.material.appbar.MaterialToolbar
