--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -57,12 +57,22 @@
             tools:layout_height="?attr/actionBarSize">
 
             <ImageView
-                android:id="@+id/toolbar_title"
+                android:id="@+id/toolbar_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@null"
-                android:src="@drawable/ic_hedvig_wordmark" />
+                android:visibility="gone"
+                android:src="@drawable/ic_hedvig_wordmark"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/OFFER_UPDATE_SUMMARY_TITLE"
+                android:textAppearance="?textAppearanceHeadline6"
+                android:visibility="gone" />
 
         </com.google.android.material.appbar.MaterialToolbar>
 
