--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -140,7 +140,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/signButton"
-                tools:text="@string/OFFER_FOOTER_GDPR_INFO" />
+                tools:text="@string/CHECKOUT_FOOTER" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
