--- a/app/src/main/res/layout/embark_select_action_item.xml
+++ b/app/src/main/res/layout/embark_select_action_item.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center"
         android:textAlignment="center"
         android:textAppearance="?textAppearanceSubtitle1"
+        android:layout_margin="@dimen/base_margin"
         tools:text="Yes, I want youth insurance" />
 
 </com.google.android.material.card.MaterialCardView>
