--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -75,6 +75,9 @@
 
     <style name="ThemeOverlay.Hedvig.InfoCard" parent="">
         <item name="colorSurface">@color/colorInfoCardSurface</item>
+        <item name="cardElevation">0dp</item>
+        <item name="strokeColor">@color/color_divider</item>
+        <item name="strokeWidth">1dp</item>
     </style>
 
     <style name="ThemeOverlay.Hedvig.PSA" parent="">
@@ -90,6 +93,9 @@
         <item name="android:textColorSecondary">@color/hedvig_black</item>
         <item name="colorOnSurface">?colorPrimary</item>
         <item name="textColorLink">?android:textColorSecondary</item>
+        <item name="cardElevation">0dp</item>
+        <item name="strokeColor">@color/color_divider</item>
+        <item name="strokeWidth">1dp</item>
     </style>
 
     <style name="ThemeOverlay.Hedvig.RenewalCard" parent="">
